exports[`Snapshots Button Default 1`] = `
<button
  className="button"
  disabled={undefined}
  onClick={undefined}>
  Button text
</button>
`;

exports[`Snapshots Button borderless 1`] = `
<button
  className="button borderless"
  disabled={undefined}
  onClick={undefined}>
  Button text
</button>
`;

exports[`Snapshots Button disabled 1`] = `
<div>
  <p>
    Default
  </p>
  <button
    className="button"
    disabled={true}
    onClick={undefined}>
    Button text
  </button>
  <br />
  <br />
  <p>
    Borderless
  </p>
  <button
    className="button borderless"
    disabled={true}
    onClick={undefined}>
    Button text
  </button>
  <br />
  <br />
  <p>
    Large
  </p>
  <button
    className="button large"
    disabled={true}
    onClick={undefined}>
    Button text
  </button>
  <br />
  <br />
  <p>
    Secondary
  </p>
  <button
    className="button secondary"
    disabled={true}
    onClick={undefined}>
    Button text
  </button>
  <br />
  <br />
  <p>
    Small
  </p>
  <button
    className="button small"
    disabled={true}
    onClick={undefined}>
    Button text
  </button>
  <br />
  <br />
  <p>
    Tertiary
  </p>
  <button
    className="button tertiary"
    disabled={true}
    onClick={undefined}>
    Button text
  </button>
  <br />
  <br />
  <p>
    Warning
  </p>
  <button
    className="button warning"
    disabled={true}
    onClick={undefined}>
    Button text
  </button>
  <p>
    Click Events Should Not Fire
  </p>
  <button
    className="button"
    disabled={true}
    onClick={[Function]}>
    No Events :(
  </button>
</div>
`;

exports[`Snapshots Button fillContainer 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
    }
  }>
  <button
    className="button fill-container"
    disabled={undefined}
    onClick={undefined}>
    Max WIDTH
  </button>
</div>
`;

exports[`Snapshots Button large 1`] = `
<button
  className="button large"
  disabled={undefined}
  onClick={undefined}>
  Button text
</button>
`;

exports[`Snapshots Button noStyle 1`] = `
<button
  className="no-style"
  disabled={undefined}
  onClick={[Function]}>
  <span
    className="text small">
    Use this as an a11y friendly click target
  </span>
</button>
`;

exports[`Snapshots Button onClick event 1`] = `
<button
  className="button"
  disabled={undefined}
  onClick={[Function]}>
  Click Me
</button>
`;

exports[`Snapshots Button secondary 1`] = `
<button
  className="button secondary"
  disabled={undefined}
  onClick={undefined}>
  Button text
</button>
`;

exports[`Snapshots Button small 1`] = `
<button
  className="button small"
  disabled={undefined}
  onClick={undefined}>
  Button text
</button>
`;

exports[`Snapshots Button tertiary 1`] = `
<button
  className="button tertiary"
  disabled={undefined}
  onClick={undefined}>
  Button text
</button>
`;

exports[`Snapshots Button warning 1`] = `
<button
  className="button warning"
  disabled={undefined}
  onClick={undefined}>
  Button text
</button>
`;

exports[`Snapshots Card default 1`] = `
<div
  className="card"
  onMouseEnter={undefined}
  onMouseLeave={undefined}>
  What is a Product Designer? An awesome story by 
  <a
    className="link"
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    className="link"
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`Snapshots Card doublePadding 1`] = `
<div
  className="card double-padding"
  onMouseEnter={undefined}
  onMouseLeave={undefined}>
  What is a Product Designer? An awesome story by 
  <a
    className="link"
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    className="link"
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`Snapshots Card empty + hovered 1`] = `
<div
  className="card empty hovered"
  onMouseEnter={undefined}
  onMouseLeave={undefined}>
  What is a Product Designer? An awesome story by 
  <a
    className="link"
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    className="link"
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`Snapshots Card empty 1`] = `
<div
  className="card empty"
  onMouseEnter={undefined}
  onMouseLeave={undefined}>
  Nothing to see here! 👻
</div>
`;

exports[`Snapshots Card faded 1`] = `
<div
  className="card faded"
  onMouseEnter={undefined}
  onMouseLeave={undefined}>
  What is a Product Designer? An awesome story by 
  <a
    className="link"
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    className="link"
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`Snapshots Card failed 1`] = `
<div
  className="card failed"
  onMouseEnter={undefined}
  onMouseLeave={undefined}>
  What is a Product Designer? An awesome story by 
  <a
    className="link"
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    className="link"
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`Snapshots Card hovered 1`] = `
<div
  className="card hovered"
  onMouseEnter={undefined}
  onMouseLeave={undefined}>
  What is a Product Designer? An awesome story by 
  <a
    className="link"
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    className="link"
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`Snapshots Card noBorder 1`] = `
<div
  className="card no-border"
  onMouseEnter={undefined}
  onMouseLeave={undefined}>
  What is a Product Designer? An awesome story by 
  <a
    className="link"
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    className="link"
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`Snapshots Card noPadding 1`] = `
<div
  className="card no-padding"
  onMouseEnter={undefined}
  onMouseLeave={undefined}>
  What is a Product Designer? An awesome story by 
  <a
    className="link"
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    className="link"
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`Snapshots Card onMouseEnter + onMouseLeave 1`] = `
<div
  className="card"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  What is a Product Designer? An awesome story by 
  <a
    className="link"
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    className="link"
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`Snapshots Icon addMedia 1`] = `
<svg
  className="icon large"
  height="100%"
  version="1.1"
  viewBox="0 0 16 16"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink">
  <g
    fill="none"
    fillRule="evenodd"
    id="buffer-web"
    stroke="none"
    strokeWidth="1">
    <g
      fill="#000000"
      id="add-media">
      <g
        id="icon-add-media"
        transform="translate(0.000000, 0.500000)">
        <ellipse
          cx="3.5"
          cy="7.5"
          id="sun"
          rx="1"
          ry="1" />
        <path
          d="M7,4 L2.0085302,4 C0.901950359,4 0,4.8918564 0,5.99201702 L0,13.007983 C0,14.0998238 0.899249601,15 2.0085302,15 L9.9914698,15 C11.0980496,15 12,14.1081436 12,13.007983 L12,9 C11.2888953,9 10.6124623,8.8515525 10,8.58395631 L10,12.4965773 C10,12.77461 9.76920319,13 9.49956417,13 L2.50043583,13 C2.22405275,13 2,12.7670975 2,12.4965773 L2,6.50342274 C2,6.22539004 2.23079681,6 2.50043583,6 L7.41604369,6 C7.1484475,5.38753765 7,4.71110471 7,4 Z"
          id="Combined-Shape" />
        <path
          d="M6.72854847,13 L10.4427219,13 C10.994669,13 11.1806866,12.6353752 10.8595051,12.1855878 L8.08131797,8.29497314 C7.75836623,7.84270671 7.23939818,7.84518568 6.9182166,8.29497314 L5.17096772,10.7418465 L4.89598004,10.3431742 C4.58220845,9.88827357 4.04270416,9.86191756 3.68900632,10.2814689 L1.19456888,13.2403351 C0.837902685,13.6634075 1.00101068,14 1.55225078,14 L6.42019856,14 C6.96793003,14 7.16465526,13.63226 6.85175993,13.1786298 L6.72854847,13 Z"
          id="Combined-Shape" />
        <path
          d="M12.5,3.5 L12.5,2.49047852 C12.5,2.21505737 12.2761424,2 12,2 C11.7319336,2 11.5,2.21959471 11.5,2.49047852 L11.5,3.5 L10.4904785,3.5 C10.2150574,3.5 10,3.72385763 10,4 C10,4.26806641 10.2195947,4.5 10.4904785,4.5 L11.5,4.5 L11.5,5.50952148 C11.5,5.78494263 11.7238576,6 12,6 C12.2680664,6 12.5,5.78040529 12.5,5.50952148 L12.5,4.5 L13.5095215,4.5 C13.7849426,4.5 14,4.27614237 14,4 C14,3.73193359 13.7804053,3.5 13.5095215,3.5 L12.5,3.5 Z M12,8 C9.790861,8 8,6.209139 8,4 C8,1.790861 9.790861,0 12,0 C14.209139,0 16,1.790861 16,4 C16,6.209139 14.209139,8 12,8 Z"
          id="Combined-Shape" />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Snapshots Image Default 1`] = `
<img
  alt="Image"
  className=""
  src="http://lorempixel.com/400/400/cats/"
  style={
    Object {
      "height": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "objectFit": undefined,
      "width": undefined,
    }
  } />
`;

exports[`Snapshots Image MH=10em 1`] = `
<img
  alt="Image"
  className=""
  src="http://lorempixel.com/400/400/cats/"
  style={
    Object {
      "height": undefined,
      "maxHeight": "10em",
      "maxWidth": undefined,
      "objectFit": undefined,
      "width": "14em",
    }
  } />
`;

exports[`Snapshots Image MW=10em 1`] = `
<img
  alt="Image"
  className=""
  src="http://lorempixel.com/400/400/cats/"
  style={
    Object {
      "height": "14em",
      "maxHeight": undefined,
      "maxWidth": "10em",
      "objectFit": undefined,
      "width": undefined,
    }
  } />
`;

exports[`Snapshots Image W=10em H=10em 1`] = `
<img
  alt="Image"
  className=""
  src="http://lorempixel.com/400/400/cats/"
  style={
    Object {
      "height": "10em",
      "maxHeight": undefined,
      "maxWidth": undefined,
      "objectFit": undefined,
      "width": "10em",
    }
  } />
`;

exports[`Snapshots Image W=40px H=40px 1`] = `
<img
  alt="Image"
  className=""
  src="http://lorempixel.com/400/400/cats/"
  style={
    Object {
      "height": "40px",
      "maxHeight": undefined,
      "maxWidth": undefined,
      "objectFit": undefined,
      "width": "40px",
    }
  } />
`;

exports[`Snapshots Image W=100% 1`] = `
<img
  alt="Image"
  className=""
  src="http://lorempixel.com/400/400/cats/"
  style={
    Object {
      "height": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "objectFit": undefined,
      "width": "100%",
    }
  } />
`;

exports[`Snapshots Image border: circle 1`] = `
<img
  alt="Image"
  className="circle"
  src="http://lorempixel.com/400/400/cats/"
  style={
    Object {
      "height": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "objectFit": undefined,
      "width": undefined,
    }
  } />
`;

exports[`Snapshots Image border: rounded 1`] = `
<img
  alt="Image"
  className="rounded"
  src="http://lorempixel.com/400/400/cats/"
  style={
    Object {
      "height": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "objectFit": undefined,
      "width": undefined,
    }
  } />
`;

exports[`Snapshots Image small image 1`] = `
<img
  alt="Image"
  className=""
  src="http://lorempixel.com/50/50/cats/"
  style={
    Object {
      "height": undefined,
      "maxHeight": "10em",
      "maxWidth": "10em",
      "objectFit": "contain",
      "width": "10em",
    }
  } />
`;

exports[`Snapshots Image tall image 1`] = `
<img
  alt="Image"
  className=""
  src="http://lorempixel.com/400/1000/cats/"
  style={
    Object {
      "height": "10em",
      "maxHeight": "10em",
      "maxWidth": "10em",
      "objectFit": "contain",
      "width": "10em",
    }
  } />
`;

exports[`Snapshots Image wide image 1`] = `
<img
  alt="Image"
  className=""
  src="http://lorempixel.com/1000/400/cats/"
  style={
    Object {
      "height": "10em",
      "maxHeight": "10em",
      "maxWidth": "10em",
      "objectFit": "contain",
      "width": "10em",
    }
  } />
`;

exports[`Snapshots Link Default 1`] = `
<div>
  <a
    className="link"
    href="https://twitter.com">
    Twitter
  </a>
  <br />
  <a
    className="link"
    href="https://buffer.com">
    Buffer
  </a>
</div>
`;

exports[`Snapshots LinkifiedText default 1`] = `
<span
  className="text">
  a 
  <a
    className="link"
    href="http://blog.twitter.com/2011/05/twitter-for-mac-update.html">
    blog.twitter.com/2011/05/twitte…
  </a>
   b
</span>
`;

exports[`Snapshots LinkifiedText empty string 1`] = `
<span
  className="text" />
`;

exports[`Snapshots LinkifiedText no links 1`] = `
<span
  className="text">
  a b
</span>
`;

exports[`Snapshots LinkifiedText two links 1`] = `
<span
  className="text">
  a 
  <a
    className="link"
    href="http://blog.twitter.com/2011/05/twitter-for-mac-update.html">
    blog.twitter.com/2011/05/twitte…
  </a>
   b 
  <a
    className="link"
    href="https://buffer.com">
    buffer.com
  </a>
   c
</span>
`;

exports[`Snapshots List default 1`] = `
<ul
  className="ul">
  <li
    className="li">
    apples
  </li>
  <li
    className="li">
    bananas
  </li>
  <li
    className="li">
    oranges
  </li>
</ul>
`;

exports[`Snapshots ListItem default 1`] = `
<li
  className="li">
  Bananas
</li>
`;

exports[`Snapshots Loader default 1`] = `
<div
  className="loader">
  <div
    className="icon">
    <svg
      className="icon"
      height="100%"
      version="1.1"
      viewBox="0 0 16 16"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink" />
    <svg
      className="icon"
      height="100%"
      version="1.1"
      viewBox="0 0 16 16"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink" />
    <svg
      className="icon"
      height="100%"
      version="1.1"
      viewBox="0 0 16 16"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink" />
  </div>
</div>
`;

exports[`Snapshots Loader withText 1`] = `
<div
  className="loader">
  <div
    className="icon">
    <svg
      className="icon"
      height="100%"
      version="1.1"
      viewBox="0 0 16 16"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink" />
    <svg
      className="icon"
      height="100%"
      version="1.1"
      viewBox="0 0 16 16"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink" />
    <svg
      className="icon"
      height="100%"
      version="1.1"
      viewBox="0 0 16 16"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink" />
  </div>
  <span
    className="text">
    Some neat loading text!
  </span>
</div>
`;

exports[`Snapshots NavBar Default 1`] = `
<div
  className="navbar">
  <svg
    className="icon"
    height="100%"
    version="1.1"
    viewBox="0 0 16 16"
    width="100%"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink" />
  <span
    className="text bold">
    Buffer
  </span>
  <span
    className="text">
    
  </span>
</div>
`;

exports[`Snapshots NavBar Subtitle 1`] = `
<div
  className="navbar">
  <svg
    className="icon"
    height="100%"
    version="1.1"
    viewBox="0 0 16 16"
    width="100%"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink" />
  <span
    className="text bold">
    Buffer
  </span>
  <span
    className="text">
     NavBar
  </span>
</div>
`;

exports[`Snapshots Text Bold 1`] = `
<span
  className="text bold">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Snapshots Text Default 1`] = `
<span
  className="text">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Snapshots Text ExtraSmall 1`] = `
<span
  className="text extraSmall">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Snapshots Text Gray 1`] = `
<span
  className="text gray">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Snapshots Text Large 1`] = `
<span
  className="text large">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Snapshots Text Small 1`] = `
<span
  className="text small">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Snapshots Text Thin 1`] = `
<span
  className="text thin">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Snapshots Text White 1`] = `
<span
  className="text white">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Snapshots Video Default 1`] = `
<video
  className=""
  controls={true}
  height={undefined}
  width={undefined}>
  <source
    src="https://buffer-media-uploads.s3.amazonaws.com/52bc7a190a0e32ec4c000020/57bf2d1c6896977343f80535/output/87be589cc006a816411e8799ad3e67d9.original.mp4"
    type="video/mp4" />
  \"Your Browser Does Not Support Video\"
</video>
`;

exports[`Snapshots Video No Controls 1`] = `
<video
  className=""
  controls={false}
  height={undefined}
  width={undefined}>
  <source
    src="https://buffer-media-uploads.s3.amazonaws.com/52bc7a190a0e32ec4c000020/57bf2d1c6896977343f80535/output/87be589cc006a816411e8799ad3e67d9.original.mp4"
    type="video/mp4" />
  \"Your Browser Does Not Support Video\"
</video>
`;

exports[`Snapshots Video No Video 1`] = `
<video
  className=""
  controls={true}
  height={undefined}
  width={undefined}>
  \"Your Browser Does Not Support Video\"
</video>
`;

exports[`Snapshots Video W=100% 1`] = `
<video
  className=""
  controls={true}
  height={undefined}
  width="100%">
  <source
    src="https://buffer-media-uploads.s3.amazonaws.com/52bc7a190a0e32ec4c000020/57bf2d1c6896977343f80535/output/87be589cc006a816411e8799ad3e67d9.original.mp4"
    type="video/mp4" />
  \"Your Browser Does Not Support Video\"
</video>
`;

exports[`Snapshots Video W=200px H=100px 1`] = `
<video
  className=""
  controls={true}
  height="100px"
  width="200px">
  <source
    src="https://buffer-media-uploads.s3.amazonaws.com/52bc7a190a0e32ec4c000020/57bf2d1c6896977343f80535/output/87be589cc006a816411e8799ad3e67d9.original.mp4"
    type="video/mp4" />
  \"Your Browser Does Not Support Video\"
</video>
`;

exports[`Snapshots Video rounded border 1`] = `
<video
  className="rounded"
  controls={true}
  height={undefined}
  width={undefined}>
  <source
    src="https://buffer-media-uploads.s3.amazonaws.com/52bc7a190a0e32ec4c000020/57bf2d1c6896977343f80535/output/87be589cc006a816411e8799ad3e67d9.original.mp4"
    type="video/mp4" />
  \"Your Browser Does Not Support Video\"
</video>
`;
